--- a/form_letter.erb
+++ b/form_letter.erb
@@ -6,7 +6,7 @@
     <title>Thank You!</title>
   </head>
   <body>
-    <h1>Thanks FIRST_NAME!</h1>
+    <h1>Thanks <%= name %>!</h1>
     <p>
       Thanks for coming to our conference. We couldn't have done it without you!
     </p>
@@ -17,13 +17,19 @@
       representatives:
     </p>
 
-    <table>
-      <tr>
-        <th>Legislators</th>
-      </tr>
-      <tr>
-        <td>LEGISLATORS</td>
-      </tr>
-    </table>
-  </body>
+  <table>
+    <% if legislators.kind_of?(Array) %>
+      <th>Name</th><th>Website</th>
+        <% legislators.each do |legislator| %>
+        <tr>
+          <td><%= "#{legislator.name}" %></td>
+          <td><%= "#{legislator.urls.join(" ")}" unless legislator.urls.nil? %></td>
+        </tr>
+        <% end %>
+    <% else %>
+      <th></th>
+      <td><%= "#{legislators}" %></td>
+    <% end %>
+  </table>
+</body>
 </html>
